--- a/ecs152a.html
+++ b/ecs152a.html
@@ -1,10 +1,3 @@
-HTTP/1.0 200 OK
-Server: BaseHTTP/0.6 Python/3.9.2
-Date: Mon, 09 May 2022 01:41:36 GMT
-Content-type: text/html
-Connection: keep-alive
-Content-length: 58533
-
 <!DOCTYPE html>
 <html>
 
@@ -488,3 +481,6 @@ Content-length: 58533
    </section>
 
 </body>
+
+</html>
+
